# APCWeek2

./: CMakeLists.txt
assignment/: CMakeLists.txt  main.cpp
assignment/clib/: CMakeLists.txt  clogger_adapter.cpp  clogger_adapter.h  file_writer.cpp  file_writer.h  logger.c  logger.h
assignment/include/: console_writer.h  file_writer_adapter.h  ilogger.h  logger.h  multi_writer.h  program.h  stream_writer.h
assignment/include/decorators/: logger_decorator.h  runningtime_decorator.h  timestamp_decorator.h
assignment/src/: CMakeLists.txt  console_writer.cpp  file_writer_adapter.cpp  logger.cpp  multi_writer.cpp  stream_writer.cpp
assignment/src/decorators/: logger_decorator.cpp  runningtime_decorator.cpp  timestamp_decorator.cpp
